--- a/quiz-app-admin/users.html
+++ b/quiz-app-admin/users.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>High Scores</title>
+    <title>Users</title>
     <link rel="stylesheet" href="app.css" />
-    <link rel="stylesheet" href="highscores.css" />
+    <link rel="stylesheet" href="users.css" />
   </head>
   <body>
     <div class="container">
-      <div id="highScores" class="flex-center flex-column">
-        <h1 id="finalScore">High Scores</h1>
+      <div id="users" class="flex-center flex-column">
+        <h1 id="usersHeader">Users</h1>
         <a class="btn" href="/">Go Home</a>
       </div>
     </div>
-    <script src="highscores.js"></script>
+    <script src="users.js"></script>
   </body>
 </html>
